apps/cez/elk_ondrej/manifests/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elk
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - es-ondrej.k8s.sikademo.com
        - kb-ondrej.k8s.sikademo.com
      secretName: elk-tls
  rules:
    - host: es-ondrej.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elk-es-http
                port:
                  number: 9200
    - host: kb-ondrej.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elk-kb-http
                port:
                  number: 5601
